# BluetoothSensorNode

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  nrf5340dk_nrf5340_cpuapp_ns.overlay  pm_static.yml  prj.conf
artifacts/: i2c_bme280_communication@100kbps
src/: main.c
src/cbluetooth/: CMakeLists.txt  cgap.c  cgap.h
src/lib/: CMakeLists.txt  bme280_mod.c  bme280_mod.h  gap.c  gap.h  gatt_ess.c  gatt_ess.h  gpios.c  gpios.h  oled_mod.c  oled_mod.h
src/shell/: CMakeLists.txt  cshell.c  cshell.h
