# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.20.0)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(nrf5340cpp)

add_subdirectory(src/shell)
add_subdirectory(src/cbluetooth)
target_sources(app PRIVATE src/main.c)
target_link_libraries(app PUBLIC shell_lib cbluetooth_lib)
